# urljsf

./: .gitignore  .prettierignore  .vale.ini  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  package.json  pixi.toml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs.md  release.md
.github/workflows/: badges.yml  ci.yml  pages.yml
atest/fixtures/: 002_installer.toml
atest/libraries/: archive.py  server.py
atest/resources/: browser.resource  coverage.resource  env.resource  rjsf.resource  server.resource  urljsf.resource  xkcd.resource
atest/suites/: 00_jsdemo.robot  02_mkdocs.robot  __init__.robot
atest/suites/01_docs/: 000_xkcd.robot  001_py.robot  002_installer.robot  __init__.robot
docs/: .readthedocs.yaml  .readthedocs.yml  conf.py  demo.toml  demos.py  index.md
docs/_static/schema/: form.schema.toml
docs/_static/schema/v0/: form.schema.json  form.schema.toml  props.schema.json
docs/demos/: iframe.md  index.md  installer.md  kitchen-sink.md  multiple.md  pets.md  pets.schema.json  py.md  python.md  simple.md  simple.schema.json  xkcd.md
docs/use/: advanced.md  cli.md  index.md  mkdocs.md  schema.md  schema.rst  script.md  sphinx.md
docs/use/advanced/: index.md  remote.md  templates.md  uischema.md
js/: README.md  package.json  webpack.config.mjs
js/demo/: example.schema.json  example.schema.yaml  index.html
js/demo/json/: file.data.json  file.schema.json  file.uischema.json  url.schema.json  url.uischema.json  urljsf.json
js/demo/toml/: file.data.toml  file.schema.toml  file.uischema.toml  url.schema.toml  url.uischema.toml  urljsf.toml
js/demo/yaml/: file.data.yaml  file.schema.yaml  file.uischema.yaml  url.schema.yaml  url.uischema.yaml  urljsf.yaml
js/schema/: form.schema.toml
js/schema/v0/: form.schema.json  props.schema.json  ui.schema.json
js/src/: _props.ts  _schema.ts  ajv.ts  bootstrap.ts  filters.ts  form.tsx  index.ts  nunjucks.ts  object-template.tsx  render.tsx  themes.ts  tokens.ts  utils.ts
js/src/components/: add-button.tsx  array-item.tsx  array-template.tsx  check-item.tsx  copy-paste-pre.tsx  datalist.tsx  form.tsx  iframe.tsx  markdown.tsx  object-template.tsx  style.tsx
recipe/: recipe.yaml
scripts/: atest.py  demo.py  report.py  schema.py  watch.py
scripts/vale/: check.py
scripts/vale/config/vocabularies/urljsf/: accept.txt
src/prjsf/: __init__.py  cli.py  config.py  constants.py  prjsf.py  sphinx.py
src/prjsf/_templates/prjsf/: _form.j2  sphinx.j2  standalone.j2
src/prjsf/sphinxext/: __init__.py  directives.py  extension.py  nodes.py
src/urljsf/: __init__.py  _schema.py  cli.py  config.py  constants.py  errors.py  schema.py  source.py  urljsf.py  utils.py
src/urljsf/_schema/: __init__.py  form_schema.py  props_schema.py
src/urljsf/_templates/prjsf/: _form.j2
src/urljsf/_templates/urljsf/: _form.j2  standalone.j2
src/urljsf/mkdocsext/: plugin.py
src/urljsf/sphinxext/: __init__.py  directives.py  extension.py  nodes.py
src/urljsf/sphinxext/directives/: urljsf.py
tests/: __init__.py  conftest.py  test_cli.py  test_metadata.py  test_mkdocs.py  test_sphinx.py
tests/fixtures/cli/valid/xkcd/: urljsf.toml
tests/fixtures/mkdocs/simple-file/: mkdocs.yml
tests/fixtures/mkdocs/simple-file/docs/: index.md
tests/fixtures/projects/css/: conf.py  form1.rst  form2.rst
tests/fixtures/projects/remote/: conf.py  index.rst
tests/fixtures/projects/simple/: conf.py  form1.rst  form2.rst  index.rst
tests/fixtures/sphinx/css/: conf.py  index.rst  schema.json
tests/fixtures/sphinx/simple/: conf.py
tests/fixtures/sphinx/simple-file/: urljsf.toml
