[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.9.0,<4.0.0"]

[project]
name = "urljsf"
version = "0.1.0"
description = "Build structured data files for pull requests with JSON schema"
readme = "README.md"
authors = [{name = "urljsf contributors"}]
requires-python = ">=3.9"
license.text = "BSD-3-Clause"
classifiers = [
  "Framework :: Sphinx :: Extension",
  "Framework :: Sphinx",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Typing :: Typed",
  "Topic :: File Formats",
  "Topic :: File Formats :: JSON",
  "Topic :: File Formats :: JSON :: JSON Schema",
]
scripts.urljsf = "urljsf.cli:main"
dependencies = [
  "jinja2",
  "tomli; python_version < '3.11'",
  "jsonschema[format]",
]

[project.optional-dependencies]
sphinx = [
  "sphinx >=6.1",
]
yaml = [
  "ruamel.yaml",
]
validate = [
  "jsonschema[format] >=4.18",
]

[project.urls]
"Bug Tracker" = "https://github.com/deathbeds/urljsf/issues"
Changelog = "https://github.com/deathbeds/urljsf/blob/main/CHANGELOG.md"
Documentation = "https://urljsf.rtfd.io"
PyPI = "https://pypi.org/project/urljsf"
Source = "https://github.com/deathbeds/urljsf"

[tool.flit.sdist]
include = ["LICENSE"]

# coverage #####################################################################
[tool.coverage.run]
disable_warnings = [
  "no-data-collected",
  "module-not-measured",
  "module-not-imported",
]

[tool.coverage.report]
exclude_lines = [
  "except ImportError as err:",
  "if TYPE_CHECKING:",
  """if __name__ == "__main__":""",
  "pragma: no cover",
]

[tool.coverage.html]
show_contexts = true

# mypy #########################################################################
[tool.mypy]
cache_dir = "build/.cache/mypy"
python_version = "3.11"
strict = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

# pytest #######################################################################
[tool.pytest.ini_options]
cache_dir = "build/.cache/pytest"
generate_report_on_test = true
script_launch_mode = "subprocess"
testpaths = ["tests"]
addopts = ["--color=yes", "-Werror", "--tb=long", "-vv"]

# ruff #########################################################################
[tool.ruff]
cache-dir = "build/.cache/ruff"
extend-exclude = [".ipynb_checkpoints"]
include = ["{tests,docs,src,scripts}/**/*.{py,ipynb}"]
line-length = 88
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D211", "D213", "COM812", "ISC001", "D203", "DOC501", "DOC201"]
flake8-copyright.notice-rgx = '''
# Copyright \(C\) urljsf contributors\.
# Distributed under the terms of the Modified BSD License\.
'''
isort.known-first-party = ["urljsf"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLC0415", "T201", "DOC402", "ARG001", "INP001"]
"**/sphinxext/*.py" = ["TID252", "ANN401", "ARG001"]
"docs/**/*.py" = ["INP001"]
"nodes.py" = ["N801"]
"**/_schema/*.py" = [
  "N815",
  "UP006",
  "UP035",
  "TID252",
  "E501",
  "D415",
  "D400",
  "TCH001",
]
"scripts/*.py" = ["S603", "T201", "INP001", "ANN401", "S404"]
